--- a/core-tf-templates/tf_resource.tf.j2
+++ b/core-tf-templates/tf_resource.tf.j2
@@ -1,19 +1,19 @@
 resource "{{ resource.name }}" "{{ '{{' }} {{ resource.var_name }}.name {{ '}}' }}" {
-{% if resource.required_vars is defined %}
+{% if resource.required_vars is defined and resource.required_vars|length %}
   ## Required Vars
 {% for required in resource.required_vars %}
 {% include('tf_resource_required_variables.tf.j2') %}
 {% endfor %}
 {% endif %}
 
-{% if resource.optional_vars is defined %}
+{% if resource.optional_vars is defined and resource.optional_vars|length %}
   ## Optional Vars
 {% for optional in resource.optional_vars %}
 {% include('tf_resource_optional_variables.tf.j2') %}
 {% endfor %}
 {% endif %}
 
-{% if blocks is defined %}
+{% if blocks is defined and blocks is not none and blocks|length %}
   ## Blocks
 {% for block in blocks %}
 {% if block.parent_block is not defined %}
